fix(aio): style correctly on Safari

--- a/aio/src/styles/1-layouts/_top-menu.scss
+++ b/aio/src/styles/1-layouts/_top-menu.scss
@@ -125,6 +125,7 @@ aio-search-box.search-container {
     width: 180px;
     max-width: 240px;
     height: 50%;
+    -webkit-appearance: none;
 
     &:focus {
         outline: none;
